--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,4 +5,5 @@ description = ""
 name = "Sprint v1"
 version = "1.0"
 [tool.poetry.dependencies]
-pyttsx3 = "^2.90"
+pyttsx3 = { git = "https://github.com/nateshmbhat/pyttsx3" }
+requests = { git = "https://github.com/requests/requests.git" }
